Apache License 2.0 (see License.txt). Jakarta commons is an open development community. 
All are invited to contribute by joining us on the mailing lists 
(see http://jakarta.apache.org/commons) or by raising issues and submitting patches 
through http://issues.apache.org.

Betwixt 0.8 is a feature release. Support for polymorphic mappings has been improved. 
More flexible mapping are possible using new strategies.

Betwixt 0.8 is compatible with 0.7.

For more details, see the detailed change log contained in docs/tasks.html.

FEATURES           
 * Added strategies for suppression of attributes and elements at introspection time.
 * Improved support for natural polymorphic mappings of collection subclasses.
 * Added support for option inheritance between parent and target mappings. Issue BETWIXT-45 
   (#37542).
 * Added getInheritedOption method to Context to assist with inheritance amongst options.
 * Added convenience constructor to DefaultIdStoringStrategy. This makes life easier for users that want to 
   use object identity (rather than equality) when generating IDs.
 * Added support for text and options into multi-mappings.
 * Improved support for subclasses of Java collective types by factoring collective type recognition into 
   strategy.
 * Added support for multiple contained polymorphic mappings.
 * Added transcription strategy to allow flexbility for schema type names.
 * Added package name property suppression strategy and make default property suppression strategy 
   public nest so that it can be subclassed.
 * Made intitial indent level used for pretty printing configurable.
 * Added guess-name attribute to addDefaults element in dot betwixt file. This allows mixed collections to 
   be used with add-adders and addDefaults.


FIXES
 * Fixed TextRule content bug. Issue BETWIXT-31 (#36930).
 * Fixed attribute ID name recognition bug. Issue BETWIXT-15 (#36929). 
 * Fixed bug when introspecting in secure environments.