@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--build.xml generated by maven from project.xml version 0.8-RC1
-  on date November 4 2006, time 1746-->
+<!--build.xml generated by maven from project.xml version 0.8
+  on date December 21 2006, time 2134-->
 
 <project default="jar" name="commons-betwixt" basedir=".">
   <property name="defaulttargetdir" value="target">
@@ -20,7 +20,7 @@
   </property>
   <property name="javadocdir" value="dist/docs/api">
   </property>
-  <property name="final.name" value="commons-betwixt-0.8-RC1">
+  <property name="final.name" value="commons-betwixt-0.8">
   </property>
   <path id="build.classpath">
     <fileset dir="${libdir}">
@@ -152,7 +152,7 @@
     </tstamp>
     <property name="copyright" value="Copyright &amp;copy;  The Apache Software Foundation. All Rights Reserved.">
     </property>
-    <property name="title" value="Betwixt 0.8-RC1 API">
+    <property name="title" value="Betwixt 0.8 API">
     </property>
     <javadoc use="true" private="true" destdir="${javadocdir}" author="true" version="true" sourcepath="src/java" packagenames="org.apache.commons.betwixt.*">
       <classpath>
@@ -166,23 +166,23 @@
 
     <setproxy>
     </setproxy>
-    <get dest="${libdir}/commons-logging-1.0.4.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/commons-logging/jars/commons-logging-1.0.4.jar">
+    <get dest="${libdir}/commons-logging-1.0.4.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/commons-logging/jars/commons-logging-1.0.4.jar">
     </get>
-    <get dest="${libdir}/commons-beanutils-core-1.7.0.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/commons-beanutils/jars/commons-beanutils-core-1.7.0.jar">
+    <get dest="${libdir}/commons-beanutils-core-1.7.0.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/commons-beanutils/jars/commons-beanutils-core-1.7.0.jar">
     </get>
-    <get dest="${libdir}/commons-digester-1.7.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/commons-digester/jars/commons-digester-1.7.jar">
+    <get dest="${libdir}/commons-digester-1.7.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/commons-digester/jars/commons-digester-1.7.jar">
     </get>
-    <get dest="${libdir}/xerces-2.4.0.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/xerces/jars/xerces-2.4.0.jar">
+    <get dest="${libdir}/xerces-2.4.0.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/xerces/jars/xerces-2.4.0.jar">
     </get>
-    <get dest="${libdir}/xml-apis-1.0.b2.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/xml-apis/jars/xml-apis-1.0.b2.jar">
+    <get dest="${libdir}/xml-apis-1.0.b2.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/xml-apis/jars/xml-apis-1.0.b2.jar">
     </get>
-    <get dest="${libdir}/junit-3.8.1.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/junit/jars/junit-3.8.1.jar">
+    <get dest="${libdir}/junit-3.8.1.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/junit/jars/junit-3.8.1.jar">
     </get>
-    <get dest="${libdir}/maven-cobertura-plugin-1.1.1.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/maven-plugins/plugins/maven-cobertura-plugin-1.1.1.jar">
+    <get dest="${libdir}/maven-cobertura-plugin-1.1.1.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/maven-plugins/plugins/maven-cobertura-plugin-1.1.1.jar">
     </get>
-    <get dest="${libdir}/maven-artifact-plugin-1.5.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/maven/plugins/maven-artifact-plugin-1.5.jar">
+    <get dest="${libdir}/maven-artifact-plugin-1.5.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/maven/plugins/maven-artifact-plugin-1.5.jar">
     </get>
-    <get dest="${libdir}/maven-xdoc-plugin-1.9.2.jar" usetimestamp="true" ignoreerrors="true" src="http://www.ibiblio.org/maven/maven/plugins/maven-xdoc-plugin-1.9.2.jar">
+    <get dest="${libdir}/maven-xdoc-plugin-1.9.2.jar" usetimestamp="true" ignoreerrors="true" src="http://repo1.maven.org/maven/maven/plugins/maven-xdoc-plugin-1.9.2.jar">
     </get>
   </target>
   <target name="install-maven">
