@@ -39,6 +39,11 @@
         <created>2005-07-25</created>
         <version>0.7</version>
       </revision>
+      <revision>
+        <name>commons-betwixt</name>
+        <created>2006-12-21</created>
+        <version>0.8</version>
+      </revision>
     </release>
     <mailing-list rdf:resource="http://jakarta.apache.org/site/mail2.html#Commons"/>
   </Project>
